# sensecap-openwrt-feed

./: .config  feeds.conf.default
.github/workflows/: build.yml
feeds/lorawan-gateway/basicstation_ubus/: Makefile
feeds/lorawan-gateway/chirpstack-concentratord-target-seeed-gateway/: Makefile
feeds/lorawan-gateway/chirpstack-gateway-bridge/: Makefile
feeds/lorawan-gateway/hardware-info/: Makefile
feeds/lorawan-gateway/lora/: Makefile
feeds/lorawan-gateway/lte-serve/: Makefile
feeds/lorawan-gateway/luci-app-cellular/: Makefile
feeds/lorawan-gateway/luci-app-chirpstack-concentratord-target-seeed-gaateway/: Makefile
feeds/lorawan-gateway/luci-app-gateway/: Makefile
feeds/lorawan-gateway/luci-app-lora/: Makefile
feeds/lorawan-gateway/luci-app-lorawan-gateway/: Makefile
feeds/lorawan-gateway/luci-app-lte/: Makefile
feeds/lorawan-gateway/luci-app-ota/: Makefile
feeds/lorawan-gateway/luci-app-rs485/: Makefile
feeds/lorawan-gateway/luci-app-terminal/: Makefile
feeds/lorawan-gateway/multi-wan/: Makefile
feeds/lorawan-gateway/quectel-cm/: Makefile
feeds/lorawan-gateway/rs485-module/: Cargo.toml  Makefile
feeds/lorawan-gateway/rs485-module/files/: rs485-module.init
feeds/lorawan-gateway/rs485-module/files/etc/config/: rs485-module
feeds/lorawan-gateway/rs485-module/src/: main.rs
feeds/lorawan-gateway/usb-wifi/: Makefile
feeds/lorawan-gateway/wifi-module/: Makefile
feeds/luci-lorawan-gateway/luci-app-gateway/: Makefile
feeds/luci-lorawan-gateway/luci-app-multiwan/: Makefile
feeds/luci-lorawan-gateway/luci-app-ota/: Makefile
(+91 files in other folders)
